--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -31,7 +31,7 @@
                 Total:
                 <span class="font-bold">{{'207' | currency}}</span>
             </div>
-            <div class="pt-3 flex justify-betweens">
+            <div class="pt-3 flex justify-between">
                 <button class="bg-rose-600 text-white rounded-full w-9 h-9">
                     <mat-icon>remove_shopping_cart</mat-icon>
                 </button>
