--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="max-w-7xl mx-auto border-x justify-between">
+<mat-toolbar class="max-w-10xl mx-auto border-x justify-between">
     <a routerLink="home">BaseCode Store</a>
     <button
     mat-icon-button [matMenuTriggerFor]="menu">
@@ -38,7 +38,7 @@
                 <button 
                 routerLink="cart"
                 class="bg-green-600 text-white rounded-full w-9 h-9">
-                    <mat-icon>remove_shopping_cart </mat-icon>
+                    <mat-icon>shopping_cart </mat-icon>
                 </button>
             </div>
         </div>
