--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,46 +1,43 @@
 <mat-toolbar class="max-w-10xl mx-auto border-x justify-between">
-    <a routerLink="home">BaseCode Store</a>
-    <button
-    mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon
-        [matBadge] = "1"
-        matBadgeColor="warn"
-        >shopping_cart</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-        <div class="p-3 divide-y divide-solid">
-            <div class="pb-3 flex justify-between">
-                <span class="mr-16">1 Items</span>
-                <a routerLink="cart">View Cart</a>
-            </div>
-            <div class="py-3">
-                <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
-                    <span class="font-bold">{{ '150' | currency: 'EUR'}}</span>
-                </div>
-                <div class="flex justify-between font-light mb-2">
-                    Monitors x 2
-                    <span class="font-bold">{{ '45' | currency: 'EUR'}}</span>
-                </div>
-                <div class="flex justify-between font-light mb-2">
-                    Mouse x 1
-                    <span class="font-bold">{{ '12' | currency: 'EUR'}}</span>
-                </div>
-            </div>
-            <div class="flex justify-between py-3 font-light">
-                Total:
-                <span class="font-bold">{{'207' | currency}}</span>
-            </div>
-            <div class="pt-3 flex justify-between">
-                <button class="bg-rose-600 text-white rounded-full w-9 h-9">
-                    <mat-icon>remove_shopping_cart</mat-icon>
-                </button>
-                <button 
-                routerLink="cart"
-                class="bg-green-600 text-white rounded-full w-9 h-9">
-                    <mat-icon>shopping_cart </mat-icon>
-                </button>
-            </div>
-        </div>
-    </mat-menu>
+	<a routerLink="home">BaseCode Store</a>
+	<button mat-icon-button [matMenuTriggerFor]="menu">
+		<mat-icon
+			[matBadge]="itemsQuantity"
+			matBadgeColor="warn"
+			[matBadgeHidden]="!itemsQuantity"
+			>shopping_cart</mat-icon
+		>
+	</button>
+	<mat-menu #menu="matMenu">
+		<div class="p-3 divide-y divide-solid">
+			<div class="pb-3 flex justify-between">
+				<span class="mr-16">{{ itemsQuantity }}</span>
+				<a routerLink="cart">View Cart</a>
+			</div>
+			<div *ngIf="cart.items.length" class="py-3">
+				<div
+					*ngFor="let item of cart.items"
+					class="flex justify-between font-light mb-2">
+					{{ item.name }} X {{ item.quantity }}
+					<span class="font-bold">{{ item.price | currency : "EUR" }}</span>
+				</div>
+			</div>
+			<div class="flex justify-between py-3 font-light">
+				Total:
+				<span class="font-bold">{{ getTotal(cart.items) | currency }}</span>
+			</div>
+			<div class="pt-3 flex justify-between">
+				<button
+					(click)="onClearCart()"
+					class="bg-rose-600 text-white rounded-full w-9 h-9">
+					<mat-icon>remove_shopping_cart</mat-icon>
+				</button>
+				<button
+					routerLink="cart"
+					class="bg-green-600 text-white rounded-full w-9 h-9">
+					<mat-icon>shopping_cart </mat-icon>
+				</button>
+			</div>
+		</div>
+	</mat-menu>
 </mat-toolbar>
